<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebookPhoto">Select Facebook</string>

    <string name="app_name">PhotoWeaver</string>
    <string name="canvaspopstring">Canvas Pop</string>
    <string name="posttofacebookstring">Post</string>
    <string name="app_id">410836425696814</string>
    <string name="post_to_facebook_title">Post to facebook</string>
    <string name="post_to_facebook_caption">Write a caption...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="error">Error posting to facebook </string>
    <string name="success_message">Successfully posted</string>
    <string name="canvaspop_failed">Failed to upload to CanvasPop</string>
    <string name="storage_access_problem">Storage access problem</string>
    <string name="facebook_login_error">Please login to facebook first!</string>
    <string name="facebook_permission_error">PhotoWeaver doesn\'t have permission to post on your behalf</string>
    <string name="likeCounts">likeCounts</string>
    <string name="commentsCounts">commentsCount</string>

    <!-- providers -->
    <string name="local_provider_name">PhotoWeaver Roll</string>
    <string name="facebook_provider_name">Facebook</string>
    <string name="picasa_provider_name">Picasa</string>
    <string name="flickr_provider_name">Flickr</string>


    <!-- menu actions -->
    <string name="action_refresh">Refresh</string>
    <string name="action_camera">Camera</string>
    <string name="action_more">More</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_aviary_edit">Edit</string>
    <string name="action_post_to_facebook">Post to facebook</string>
    <string name="action_show_canvas_pop">CanvasPop</string>


    <!-- Flickr-->
    <string name="search">Search</string>
    <string name="searching_for">Searching for \"%s\" on Flickr</string>
    <string name="flickr">flickr</string>
<string name="search_failed">Search for \"%s\" failed, check your network connection and try again</string>
    <string name="loading">Loading</string>
    <string name="small">Small</string>
    <string name="photo_title">photo title</string>

  </resources>
